src/k8s/ordersdata.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-data
spec:
  selector:
    app: blazingpizza
    tier: backend
    role: orders-data
  ports:
  - protocol: TCP
    port: 27017
    targetPort: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu
spec:
  selector:
    matchLabels:
      app: blazingpizza
      tier: backend
      role: orders-data
  replicas: 1
  template:
    metadata:
      labels:
        app: blazingpizza
        tier: backend
        role: orders-data
    spec:
      containers:
        - name: orders-data
          image: "blazingreg.azurecr.io/mongo"
          ports:
            - name: http
              containerPort: 27017
