src/k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: blazingpizza
    tier: frontent
    role: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: blazingpizza
      tier: frontent
      role: web
  replicas: 1
  template:
    metadata:
      labels:
        app: blazingpizza
        tier: frontent
        role: web
    spec:
      containers:
        - name: web
          image: "blazingreg.azurecr.io/blazingpizzaweb"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
          - name: twitter-auth-secrets
            mountPath: /config
            readOnly: true
      volumes:
      - name: twitter-auth-secrets
        secret:
          secretName:
            blazing-twitter-secrets
