src/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blazing-web-ingress
  namespace: micropizzas
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - blazingpizzas.westus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: blazingpizzas.westus2.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
